Avoid use of inefficient constructors
Original author: jluehe
Date: 2006-11-09 20:25:43+00:00

svn path=/trunk/; revision=662